# lorawan

./: .gitignore  NOTES.md  README.md  docker-compose.yml  mqtt_to_influx.py  start_services.sh  stop_services.sh
firmware/lora-1/: Cargo.toml  build.rs  commands.txt
firmware/lora-1/src/: display.rs  main.rs
firmware/lora-2/: Cargo.toml  memory.x
firmware/lora-2/.cargo/: config.toml
firmware/lora-2/src/: display.rs  iv.rs  main.rs
firmware/lorawan-device-patched/: .cargo_vcs_info.json  Cargo.toml
firmware/lorawan-device-patched/src/async_device/: mod.rs
grafana/dashboards/: unified-dashboard.json  unified-dashboard.json.bak
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
mosquitto/config/: mosquitto.conf
